# EvoThinker

./: .gitignore  README.md
treequest-lab/: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run.py
treequest-lab/config/: __init__.py  config.py  hyperparameters.yaml
treequest-lab/docs/: AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  EXAMPLES.md  GETTING_STARTED.md
treequest-lab/experiments/outputs/: test_experiment.py
treequest-lab/src/agents/: __init__.py  critic.py  evaluator.py  executor.py  proposer.py  reporter.py
treequest-lab/src/core/: __init__.py  experiment_manager.py  node.py  tree.py
treequest-lab/src/evaluation/: __init__.py  harness.py
treequest-lab/src/sandbox/: __init__.py  executor.py
treequest-lab/src/search/: __init__.py  mcts.py  utils.py
treequest-lab/src/utils/: __init__.py  helpers.py  logging.py  memory.py
treequest-lab/src/visualization/: __init__.py  plots.py  tree_viz.py
treequest-lab/tests/: test_node.py  test_tree.py
